# eeg-foundation-embeddings

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
bendr/: Dockerfile  config.yaml  entrypoint.sh  extract.py  main.py
labram/: Dockerfile  config.yaml  entrypoint.sh  extract.py  main.py  requirements.txt
reve/: Dockerfile  config.yaml  entrypoint.sh  extract.py  main.py  requirements.txt
shared/: channel_maps.py  config.py  edf_loader.py  preprocessing.py  zarr_writer.py
tests/: test_channel_maps.py  test_preprocessing.py  test_zarr_writer.py
